Gradle gwt superDevMode fixed.

--- a/src/main/java/ru/finam/canvasui/public/test1.html
+++ b/src/main/java/ru/finam/canvasui/public/test1.html
@@ -5,7 +5,7 @@
     <title>Pixijs scroller test</title>
     <link href="css/deafult.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/pixi.js"></script>
-    <script type="text/javascript" language="javascript" src="app/app.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="app.nocache.js"></script>
 </head>
 <body>
     <div id="main-content" style="text-align: center;">
