Vertical scroller added.

--- a/src/main/java/ru/finam/canvasui/public/test1.html
+++ b/src/main/java/ru/finam/canvasui/public/test1.html
@@ -15,7 +15,18 @@
                 This small application presents Pixijs content scroller.
             </div>
         </div>
-        <div id="show-area"></div>
+        <div id="bottom-area">
+            <table width="100%" height="100%">
+                <tr>
+                    <td width="20%">
+                        <div id="menu-area"></div>
+                    </td>
+                    <td width="*" height="100%">
+                        <div id="show-area"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
