Working with gwt 2.7.0 JsInterop

--- a/src/main/java/ru/finam/canvasui/public/test1.html
+++ b/src/main/java/ru/finam/canvasui/public/test1.html
@@ -5,6 +5,10 @@
     <title>Pixijs scroller test</title>
     <link href="css/deafult.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/pixi.js"></script>
+    <script type="text/javascript" src="js/test.js"></script>
+
+    <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
+
     <script type="text/javascript" language="javascript" src="app.nocache.js"></script>
 </head>
 <body>
@@ -13,6 +17,9 @@
             <h3>Pixijs scroller test</h3>
             <div id="description-area" class="info-block">
                 This small application presents Pixijs content scroller.
+
+                <div id="nameFieldContainer"></div>
+
             </div>
         </div>
         <div id="bottom-area">
