--- a/src/main/java/ru/finam/canvasui/public/test1.html
+++ b/src/main/java/ru/finam/canvasui/public/test1.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="js/test.js"></script>
 
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="js/TweenMax.min.js"></script>
 
     <script type="text/javascript" language="javascript" src="app.nocache.js"></script>
 </head>
