Resize animation added.

--- a/src/main/java/ru/finam/canvasui/public/iscrollTest.html
+++ b/src/main/java/ru/finam/canvasui/public/iscrollTest.html
@@ -15,7 +15,7 @@ var myScroll;
 function loaded () {
 	myScroll = new IScroll('#wrapper', {
 		scrollbars: true,
-		mouseWheel: false,
+		mouseWheel: true,
 		interactiveScrollbars: true,
 		shrinkScrollbars: 'scale',
 		//shrinkScrollbars: false,
